--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HackSheffield5</string>
+    <string name="email_address">Email address</string>
+    <string name="password">Password</string>
 </resources>
